# fritzbox-communication

./: Cargo.toml  README.md
src/: lib.rs
src/fritzbox_communication/: mod.rs
src/fritzbox_communication/structs/: data_lua.rs  general.rs  login_lua.rs  mod.rs
