[package]
name = "fritzbox_communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.3.1"
ring = "0.16.20"
data-encoding = "2.3.2"
hex = "0.4.3"
serde_json = "1.0"
chrono = "0.4"